oceanomics/ecotaxa_dev#426: first version with concentrations.
